--- a/package.json
+++ b/package.json
@@ -4,17 +4,38 @@
   "description": "CSS only spinners for React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint '**/*.js",
+    "lint:fix": "prettier-eslint '**/*.js  --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/laserapple/react-css-spinners.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "react",
+    "css"
+  ],
+  "author": "Laser Apple",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/laserapple/react-css-spinners/issues"
   },
-  "homepage": "https://github.com/laserapple/react-css-spinners#readme"
+  "homepage": "https://github.com/laserapple/react-css-spinners#readme",
+  "devDependencies": {
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-cli": "^5.0.1"
+  }
 }
